【FIX】解决bug：html中文乱码和字符转义 & 不支持webp图片浏览器加载原图片失败

--- a/fis3-postprocessor-webp/package.json
+++ b/fis3-postprocessor-webp/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/qiudongwei/node_module#readme",
   "dependencies": {
     "cheerio": "^0.22.0"
+  },
+  "devDependencies": {
+    "he": "^1.1.1"
   }
 }
